$Id: History,v 1.51 2000-07-21 10:47:46 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

July 21, 2000 G.Cosmo (global-V02-00-00)
- STLInterface/cstring.icc: extended buffer for G4String::readLine from
  256 to 1024 characters.

June 26, 2000 G.Cosmo (global-V01-01-05)
- Fixes for problem report #104, STLInterface:
  o defs.h: defined G4RWTHROW(a) to abort() in case G4NO_STD_EXCEPTIONS
    is set.
  o tpsrtvec.icc, tvordvec.icc: corrected implementation of last() in case
    of call to G4RWTHROW(a).
  o cstring.icc: defined function G4String::strcasecompare(a,b) which will
    NOT invoke the non-ANSI function strcasecmp(a,b) when G4USE_STD_NAMESPACE
    is set.
- STLInterface/defs.h: fixed memory leaks in destruction of 'str' in
  destructors and copy-constructors of G4RWGeneralException and G4RWBoundsErr.
- G4Timer.cc: added definition of 'vfork' for IRIX6_2 (requested by FNAL
  in report #104).

June 15, 2000 G.Cosmo (global-V01-01-04)
- Introduced fixes to g4std/complex for ISO and non-ISO compliance.
  Defined G4complex type as complex type of doubles.
- Changed implementation of G4Integrator to a template class, to allow
  porting on Solaris CC compiler which does not implement templated member